# process-automation-engine

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: billing.csv
src/pao/: app.py
src/pao/domain/: models.py
src/pao/io/: csv_reader.py
tests/: test_csv_reader.py
